Fix bag witch visible content tab

--- a/CoSyLa/CoSyLa/Content/Site.css
+++ b/CoSyLa/CoSyLa/Content/Site.css
@@ -12,6 +12,7 @@ html, body {
 	 margin:0px;
 	 height:100%;
 	 width:100%;
+	 max-height:100%;
 }
 
 .nav{
@@ -21,4 +22,8 @@ html, body {
 
 .nav li{
 	 cursor:pointer;
+}
+
+.tab-content{
+	 height:90%;
 }
